--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,11 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # 如果你的主分支叫 master，请改为 master
+      - main
+
+permissions:
+  contents: read
+  pages: write
 
 jobs:
   deploy:
@@ -30,3 +34,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .vitepress/dist
+          publish_branch: gh-pages
