--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
+    "vitepress": "^1.6.3",
+    "vue3-tabs-component": "^1.3.7"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
     "deploy": "node deploy.js"
+  },
+  "dependencies": {
+    "vitepress-plugin-group-icons": "^1.6.1"
   }
 }
